--- a/EasyMed/app/src/main/res/values/colors.xml
+++ b/EasyMed/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 	<color name="teal_700">#FF018786</color>
 	<color name="black">#FF000000</color>
 	<color name="old_black">#000000</color>
+	<color name="brown">#a5682a</color>
 	<color name="red">#FF0004</color>
 	<color name="grey">#4D4848</color>
 	<color name="white">#FFFFFFFF</color>
