--- a/EasyMed/app/src/main/res/layout/activity_code_screen.xml
+++ b/EasyMed/app/src/main/res/layout/activity_code_screen.xml
@@ -12,6 +12,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="250dp"
 		android:text="1"
+		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_4"
 		app:layout_constraintEnd_toStartOf="@+id/button_2"
 		app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="250dp"
 		android:text="2"
+		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_4"
 		app:layout_constraintEnd_toStartOf="@+id/button_3"
 		app:layout_constraintStart_toEndOf="@+id/button_1"
@@ -34,6 +36,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="250dp"
 		android:text="3"
+		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/button_2"
 		app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +46,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="4"
+		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_7"
 		app:layout_constraintEnd_toStartOf="@+id/button_5"
 		app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +57,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="5"
+		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_8"
 		app:layout_constraintEnd_toStartOf="@+id/button_6"
 		app:layout_constraintStart_toEndOf="@+id/button_4"
@@ -63,6 +68,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="6"
+		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_9"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/button_5"
@@ -73,6 +79,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="7"
+		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toStartOf="@+id/button_8"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/button_4" />
@@ -82,6 +89,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="8"
+		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_10"
 		app:layout_constraintEnd_toStartOf="@+id/button_9"
 		app:layout_constraintStart_toEndOf="@+id/button_7"
@@ -92,6 +100,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="9"
+		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/button_8"
 		app:layout_constraintTop_toBottomOf="@+id/button_6" />
@@ -101,6 +110,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="0"
+		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/button_8" />
