code buttons updated

--- a/EasyMed/app/src/main/res/layout/activity_code_screen.xml
+++ b/EasyMed/app/src/main/res/layout/activity_code_screen.xml
@@ -12,6 +12,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="250dp"
 		android:text="1"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_4"
 		app:layout_constraintEnd_toStartOf="@+id/button_2"
@@ -24,6 +25,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="250dp"
 		android:text="2"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_4"
 		app:layout_constraintEnd_toStartOf="@+id/button_3"
@@ -36,6 +38,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="250dp"
 		android:text="3"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/button_2"
@@ -46,6 +49,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="4"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_7"
 		app:layout_constraintEnd_toStartOf="@+id/button_5"
@@ -57,6 +61,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="5"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_8"
 		app:layout_constraintEnd_toStartOf="@+id/button_6"
@@ -68,6 +73,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="6"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_9"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +85,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="7"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toStartOf="@+id/button_8"
 		app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +96,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="8"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintBottom_toTopOf="@+id/button_10"
 		app:layout_constraintEnd_toStartOf="@+id/button_9"
@@ -100,6 +108,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="9"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/button_8"
@@ -110,6 +119,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="0"
+		android:clickable="true"
 		android:onClick="onNumberClick"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
